## Copyright (C) 2008-2020 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

include $(top_srcdir)/gtest.mk

EXTRA_DIST=				\
	ax_ac_append_to_file.m4		\
	ax_ac_print_to_file.m4		\
	ax_add_am_macro_static.m4	\
	ax_am_macros_static.m4		\
	ax_append_compile_flags.m4	\
	ax_append_flag.m4		\
	ax_append_link_flags.m4		\
	ax_check_compile_flag.m4	\
	ax_check_enable_debug.m4	\
	ax_check_gnu_make.m4		\
	ax_check_link_flag.m4		\
	ax_code_coverage.m4		\
	ax_compiler_flags.m4		\
	ax_compiler_flags_cflags.m4	\
	ax_compiler_flags_cxxflags.m4	\
	ax_compiler_flags_gir.m4	\
	ax_compiler_flags_ldflags.m4	\
	ax_cxx_compile_stdcxx.m4	\
	ax_cxx_compile_stdcxx_14.m4	\
	ax_file_escapes.m4		\
	ax_is_release.m4		\
	ax_lib_readline.m4		\
	ax_require_defined.m4		\
	ax_valgrind_check.m4		\
	guile.m4			\
	lib-ld.m4			\
	lib-link.m4			\
	lib-prefix.m4
