## Copyright (C) 2008-2013 Dirk-Jan C. Binnema <djcb@djcbsoftware.nl>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

include $(top_srcdir)/gtest.mk

dist_man_MANS =		\
	mu-add.1	\
	mu-bookmarks.5	\
	mu-cfind.1	\
	mu-easy.1	\
	mu-extract.1	\
	mu-find.1	\
	mu-help.1	\
	mu-index.1	\
	mu-mkdir.1	\
	mu-remove.1	\
	mu-server.1	\
	mu-script.1	\
	mu-verify.1     \
	mu-view.1	\
	mu.1		\
	mug.1
